# editor-demo

./: .gitignore  README.md  components.d.ts  package.json  pnpm-lock.yaml  splashscreen.html  vite.config.ts
.github/workflows/: main.yml
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/assets/: naive-ui-theme-overrides.js
src/components/editor/: index.vue
src/components/editor/customToolbas/: MyEmoji.vue  MyImage.vue  MyLink.vue  MyMark.vue  MyMedia.vue
src/components/editor/plugins/: media.js
src/components/editor/themes/: preview-theme-arknights.css
src/layout/: index.vue
src/utils/: preventWindow.js
